# dot2mermaid

./: LICENSE  README.md  main.py  pyproject.toml
dot2mermaid/: __init__.py  dot2mermaid.py
